# culsynth-web

./: .gitignore  Cargo.toml  build_web.sh  debug_build_web.sh  rustfmt.toml
.cargo/: config.toml
culsynth-web-audioworklet/: Cargo.toml
culsynth-web-audioworklet/src/: lib.rs
culsynth-web-ui/: Cargo.toml
culsynth-web-ui/src/: lib.rs  webmidihandler.rs
static/: encoder.js  index.html  main.js  processor.js
