[workspace]
resolver = "2"

members = [
    "culsynth-web-audioworklet",
    "culsynth-web-ui",
]

default-members = [ "culsynth-web-audioworklet", "culsynth-web-ui" ]

[workspace.package]
edition = "2021"
repository = "https://github.com/rbmj/culsynth-web"
version = "0.2.0"
authors = ["R Blair Mason"]
license = "MIT"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = 3
#strip = "symbols"

[workspace.dependencies]
wasm-bindgen = { version = "0.2.100"}
wmidi = "4.0"
fixed = "1.28"
eframe = { version = "0.31", features = []}
egui = { version = "0.31", features = ["persistence", "log", "serde"] }
log = { version = "0.4" }
serde = { version = "1.0" }

[workspace.dependencies.culsynth_plugin]
version = "0.2.0"
git = "https://github.com/rbmj/culsynth"
branch = "working"
default-features = false
features = ["wasm", "use-eframe"]
