[lib]
crate-type = ["cdylib"]

[package]
name = "culsynth-web-ui"
description = "Culsynth Web UI"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
culsynth_plugin = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
log = { workspace = true }
wmidi = {workspace = true }
fixed = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = {version = "0.3.77", features = ["AudioContext", "BaseAudioContext", "AudioNode", "MessagePort", "AudioWorkletNode", "Document", "HtmlCanvasElement", "Window"] }
wasm-bindgen-futures = "0.4"
